@@ -30,15 +30,32 @@ else{
 		$list_tab=find_all_account_tab('TAB_ACCOUNTAG','COMPUTERS',1);	
 		if ($list_tab != ''){
 			if ($protectedPost['Valid_modif_x'] != ""){
+				
+				if (!isset($protectedPost['onglet']) or $protectedPost['onglet'] == '' or ! is_numeric($protectedPost['onglet']))
+					$protectedPost['onglet'] = $list_tab['FIRST'];
+				
+				$sql_admin_info = "select ID, NAME_ACCOUNTINFO from accountinfo_config where ID_TAB = %s and account_type='COMPUTERS' order by SHOW_ORDER ASC";
+				$arg_admin_info = array($protectedPost['onglet']);
+				
+				$res_admin_info = mysql2_query_secure($sql_admin_info, $_SESSION['OCS']["readServer"], $arg_admin_info);
+				
+				while ( $val_admin_info = mysql_fetch_array($res_admin_info) ) {
+					if ($val_admin_info['NAME_ACCOUNTINFO']) {
+						$data_fields_account[$val_admin_info['NAME_ACCOUNTINFO']] = "";
+					} else {
+						$data_fields_account["fields_" . $val_admin_info["ID"]] = "";
+					}
+				}
+
 				foreach ($protectedPost as $field=>$value){
 					$temp_field=explode('_',$field);
 					if (array_key_exists( $temp_field[0] . '_' . $temp_field[1],$info_account_id) or $temp_field[0] == 'TAG'){
 						//cas of checkbox
 						if (isset($temp_field[2])){
-						$data_fields_account[$temp_field[0] . "_" . $temp_field[1]].=$temp_field[2] . "&&&";	
+							$data_fields_account[$temp_field[0] . "_" . $temp_field[1]].=$temp_field[2] . "&&&";	
 						}
 						else
-						$data_fields_account[$field]=$value;	
+							$data_fields_account[$field]=$value;	
 			
 					}
 				}
